# agent-orchestrator

./: .cdkignore  .env.example  .gitignore  CLAUDE.md  LICENSE  PARALLEL_RALPH_STATUS.md  PR_REVIEW_002_AUTONOMOUS_LOOP.md  README.md  TEST_VALIDATION_WORKFLOW.md  pyproject.toml
.claude/commands/: commit.md  ralph-integration.md  ralph-push.md  ralph.md
.claude/hooks/Stop/: hook.md
.claude/ralph-prompts/: phase6-us4-consultation.md  phase7-us5-registry.md  phase8-polish-reference.md
.claude/scripts/: test-with-venv.sh
.github/instructions/: *.instructions.md
.github/workflows/: ci.yml  claude-review.yml  cleanup-test-data.yml  setup-oidc.yml
.specify/memory/: constitution.md
.specify/templates/: spec-template.md
docs/plans/: 2026-01-17-sam-local-integration-tests-design.md
infrastructure/cdk/: app.py  cdk.json
infrastructure/cdk/lambda/: policy_enforcer.py  tool_registry.py
infrastructure/cdk/lambda_api/: __init__.py
infrastructure/cdk/stacks/: __init__.py  api_stack.py  gateway_stack.py  loop_stack.py  metadata_stack.py  test_stack.py
infrastructure/sam-local/: README.md  build.sh  docker-compose.yml  init-localstack.sh  samconfig.toml  template.yaml
infrastructure/sam-local/events/: check_compatibility.json  get_agent.json  list_agents.json  policy_enforcer.json  tool_registry_list.json  tool_registry_register.json  update_metadata.json  update_status.json
scripts/: cleanup_test_data.py  setup-github-oidc.py
specs/001-agent-framework/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-agent-framework/checklists/: requirements.md
specs/001-agent-framework/contracts/: agent-card.schema.json  custom-metadata.schema.json  registry-api.yaml
specs/002-autonomous-loop/: data-model.md  implementation-guide.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-autonomous-loop/checklists/: requirements.md
specs/002-autonomous-loop/contracts/: loop-framework.schema.json
specs/003-escalation-system/: spec.md
specs/003-escalation-system/checklists/: requirements.md
specs/004-agent-consultation/: spec.md
specs/004-agent-consultation/checklists/: requirements.md
specs/005-workflow-engine/: spec.md
specs/005-workflow-engine/checklists/: requirements.md
specs/006-verification-pipeline/: spec.md
specs/006-verification-pipeline/checklists/: requirements.md
specs/007-failure-investigation/: spec.md
specs/007-failure-investigation/checklists/: requirements.md
specs/008-oversight-dashboard/: spec.md
specs/008-oversight-dashboard/checklists/: requirements.md
src/: exceptions.py  logging_config.py
src/agents/: base_agent.py  models.py
src/agents/manifests/: architect.json  design.json  development.json  orchestrator.json  requirements.json  review.json  security.json  testing.json  uiux.json
src/consultation/: enforcement.py  rules.py
src/dashboard/: __init__.py  handlers.py  models.py  queries.py
src/gateway/: tools.py
src/loop/: __init__.py  checkpoint.py  conditions.py  framework.py  models.py
src/metadata/: models.py  storage.py  validation.py
src/orchestrator/: __init__.py  alerts.py  models.py  monitor.py  policy.py
src/registry/: __init__.py  discovery.py  handlers.py  models.py  query.py  status.py
tests/: README.md
tests/contract/: test_agent_card_schema.py  test_metadata_schema.py
tests/integration/: conftest.py  test_api_endpoints.py  test_consultation_enforcement.py  test_consultation_enforcement_local.py  test_exceptions_integration.py  test_gateway_tools.py  test_loop_e2e.py  test_metadata_storage_e2e.py  test_metadata_storage_local.py  test_metadata_validation_local.py  test_registry_api.py  test_registry_query_local.py  test_status_storage_e2e.py  test_status_storage_local.py
tests/integration/sam_local/: __init__.py  conftest.py  test_registry_handlers.py  test_standalone_handlers.py
tests/integration/test_dashboard/: __init__.py  test_queries.py
tests/integration/test_loop/: __init__.py  test_checkpoint.py  test_conditions.py
tests/integration/test_orchestrator/: test_policy.py
tests/unit/: test_base_agent.py  test_consultation_enforcement.py  test_consultation_rules.py  test_discovery.py  test_exceptions.py  test_gateway_tools.py  test_handlers.py  test_lambda_imports.py  test_logging_config.py  test_metadata_models.py  test_metadata_storage.py  test_query.py  test_status_storage.py  test_validation.py
tests/unit/test_dashboard/: test_handlers.py  test_models.py  test_queries.py
tests/unit/test_loop/: __init__.py  conftest.py  test_checkpoint.py  test_conditions.py  test_framework.py  test_models.py
tests/unit/test_orchestrator/: test_alerts.py  test_models.py  test_monitor.py  test_policy.py
